# dep-scanner

./: .env.dev  .env.development  .env.example  .env.staging  .gitignore  CHANGELOG.md  CLI_USAGE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER_TROUBLESHOOTING.md  Dockerfile  Dockerfile.aws  Dockerfile.dev  Dockerfile.staging  INTELLIJ_SETUP.md  LICENSE  MANIFEST.in  MIGRATION_SUMMARY.md  Makefile  Makefile.publish  README.md  README_PYPI.md  SECURITY.md  THIRD_PARTY_LICENSES.md  TYPESCRIPT_FIXES_SUMMARY.md  critical_test.txt  dep-scan-report.html  deploy.sh  depscan.code-workspace  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml  install.py  json  pyproject.toml  requirements.txt  requirements_test.txt  requirements_transitive_test.txt  requirements_with_via_comments.txt  (+11 more)
.github/: PRE_PUBLISH_CHECKLIST.md  PYPI_SETUP.md
.github/workflows/: build-verify.yml  ci.yml  cli-testpypi.yml  deploy.yml  e2e-tests.yml  publish.yml  pypi-publish.yml  test-package.yml  test-pypi-package.yml  test.yml
backend/: CONSISTENCY_IMPROVEMENTS.md  __init__.py  cli.py  cli_backup.py  core_scanner.py  pyproject.toml  requirements.txt
backend/app/: cli_scanner.py  config.py  formatter.py  main.py  models.py  reports.py
backend/app/resolver/: __init__.py  js_resolver.py  python_resolver.py
backend/app/resolver/factories/: __init__.py  python_factory.py
backend/app/resolver/parsers/javascript/: package_json.py  package_lock_v2.py
backend/app/resolver/parsers/python/: pipfile.py  pipfile_lock.py  requirements.py
backend/app/resolver/utils/: __init__.py  dependency_tree.py  version_utils.py
backend/app/scanner/: osv.py
backend/app/services/: app_state.py  export_service.py  rate_limiter.py  scan_service.py
backend/cli/: __init__.py  formatter.py  main.py  reports.py  scanner.py
backend/core/: __init__.py  config.py  core_scanner.py  export.py  models.py  temp_file_manager.py
backend/core/lock_generators/: __init__.py  npm_generator.py  python_generator.py
backend/core/resolver/: base.py  js_resolver.py  python_resolver.py
backend/core/resolver/factories/: base.py  js_factory.py  python_factory.py
backend/core/resolver/parsers/: __init__.py
backend/core/resolver/parsers/javascript/: __init__.py  npm_ls.py  package_json_enhanced.py  package_lock_v1.py  yarn_lock.py
backend/core/resolver/parsers/python/: __init__.py  pipfile_lock.py  poetry_lock.py  pyproject.py  requirements.py  requirements_enhanced.py
backend/core/resolver/utils/: __init__.py  dependency_tree.py  npm_transitive_resolver.py  npm_version_resolver.py  path_utils.py  pypi_transitive_resolver.py  scan_consistency.py
backend/core/scanner/: __init__.py  osv.py
backend/examples/: cache_management_demo.py  consistency_demo.py
backend/modules/: formatter.py
backend/tests/: __init__.py  conftest.py  consistency_test_results.json  test_cli_formatter.py  test_cli_main.py  test_cli_scanner.py  test_cli_service.py  test_core_scanner.py  test_cvss_scoring.py  test_edge_cases.py  test_integration.py  test_models.py  test_package_consistency.py  test_pipfile_lock_parser.py  test_python_cvss_consistency.py  test_web_api.py  test_yarn_lock_parser.py
backend/tests/fixtures/: package_json_samples.py  package_lock_samples.py  yarn_lock_samples.py
backend/tests/integration/: test_end_to_end_scanning.py
backend/tests/unit/: test_consistency_resolver.py  test_js_resolver.py  test_js_resolver_new.py  test_osv_scanner.py  test_python_resolver.py
backend/tests/unit/factories/: test_js_factory.py
backend/tests/unit/parsers/: test_package_json_parser.py  test_package_lock_v1_parser.py  test_requirements_parser.py  test_yarn_lock_parser.py
backend/tests/unit/utils/: test_version_utils.py
backend/web/: __init__.py  main.py
backend/web/services/: app_state.py  cli_service.py  consistency_service.py  export_service.py  rate_limiter.py  scan_service.py  validation.py
deploy/: README.md
deploy/.github/workflows/: deploy.yml
deploy/aws/: cloudformation.yml  deploy.sh  docker-compose.prod.yml
deploy/docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
deploy/nginx/: staging.conf
deploy/pypi/: README.md  build.sh  publish.sh  test.sh
deploy/scripts/: deploy.sh
deploy/terraform/: alb.tf  ecs.tf  main.tf  networking.tf  outputs.tf  security.tf  terraform.tfvars.example  variables.tf
docs/api/: endpoints.md
docs/architecture/: cli-vs-web-comparison.md  component-details.md  overview.md  system-overview.md
docs/development/: contributing.md  setup.md  testing.md
docs/diagrams/: class-diagram-core.md  class-diagram-parsers.md  class-diagrams.md  sequence-cli-scan.md  sequence-diagrams.md  sequence-web-scan.md  system-architecture.md  user-journey-cli.md  user-journey-web.md  user-journeys.md
docs/user-guide/: cli-usage.md  installation.md
docs/user-guides/: cli-usage.md  web-interface.md
documentation/: README.md
documentation/api/: cli-interface.md  rest-api.md
documentation/architecture/: backend-architecture.md  frontend-architecture.md  system-overview.md
documentation/diagrams/: deployment-diagrams.md
documentation/workflows/: scanning-process.md
frontend/: .env.development  .env.example  .env.staging  .eslintrc.cjs  Dockerfile.dev  Dockerfile.staging  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Header.tsx
frontend/src/data/: samplePackageLock.json
frontend/src/pages/: HomePage.tsx  ReportPage.tsx  ScanPage.tsx
frontend/src/providers/: ThemeProvider.tsx
frontend/src/styles/: report.css  (+1 more)
scripts/: build-release.sh  run_tests.py  test-package.py  test_resolvers.py  validate-docker.sh
test_dependency_types/: requirements.txt
test_vulnerable_app/: requirements.txt
tests/e2e/: playwright.config.ts
tests/fixtures/: package.json  python_samples.py  requirements.txt
tests/integration/: test_end_to_end_scanning.py
tests/unit/: test_js_resolver.py  test_js_resolver_new.py  test_osv_scanner.py  test_python_resolver.py
(+37 files in other folders)
