[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depscan-backend"
version = "1.0.0"
description = "Dependency scanner backend for vulnerability analysis"
authors = [
    {name = "DepScan Team", email = "team@depscan.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "gunicorn>=22.0.0",
    "httpx==0.28.1",
    "pydantic==2.11.0",
    "pydantic-settings>=2.0.0",
    "typer[all]==0.15.1",
    "rich==14.1.0",
    "pipdeptree==2.23.4",
    "packaging==24.2",
    "tomli==2.1.0",
    "pyyaml==6.0.2",
    "aiosqlite==0.20.0",
    "python-multipart==0.0.20",
    "websockets==14.1",
    "pip-audit>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-httpx>=0.30.0",
]

test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-httpx>=0.30.0",
]

[project.scripts]
depscan = "backend.cli.scanner:main"

[tool.setuptools]
packages = ["backend"]

[tool.setuptools.package-dir]
"" = "."

[project.urls]
Homepage = "https://github.com/your-org/depscan"
Documentation = "https://github.com/your-org/depscan"
Repository = "https://github.com/your-org/depscan"
"Bug Tracker" = "https://github.com/your-org/depscan/issues"